--- a/templates/transactions/transaction_form.html
+++ b/templates/transactions/transaction_form.html
@@ -6,10 +6,11 @@
 <div class="container">
       <div class="row justify-content-center">
         <div class="col-8">
-          <h1 class="mt-2">Budget Plan for {{ budget_month_date }}</h1>
+          <h1 class="mt-2">Add a Record or Update a Record</h1>
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-primary">Get Transactions</button>
+    <div class="mt-2"></div>
+    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 {% endblock %}
