--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 {% load bootstrap4 %}       {# import bootstrap4/bootstrap3 #}
 {% bootstrap_css %}         {# Embed Bootstrap CSS #}
-{% bootstrap_javascript jquery='full' %}  {# Embed Bootstrap JS+jQuery #}
+{% bootstrap_javascript jquery='full' %} 
+{# Embed Bootstrap JS+jQuery #}
 {{ form.media }}            {# Adds date-picker required JS and CSS #}
   </head>
   <body>
@@ -32,10 +33,6 @@
         <a class="nav-link" href="/categories/">categories</a>
       </li>
       </li>      
-      <li class="nav-item">
-        <a class="nav-link" href="/accounts/trans-by-date">transactions by date</a>
-      </li>      
-    </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
@@ -46,4 +43,5 @@
           {% block content %}
           {% endblock %}
   </body>
+
 </html>
