--- a/templates/transactions/index.html
+++ b/templates/transactions/index.html
@@ -3,8 +3,12 @@
 <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-8">
-          <h1 class="mt-2">Transactions</h1>
+          <h1 class="mt-2">Transactions for the current month</h1>
 
+<div class="d-flex flex-row-reverse">
+    <div class="p-2"><a class = "btn btn-success" href="{%url "transaction-add"%}">Add a transaction</a></div>
+</div>
+<div class="mt-2"></div>
 <table class="table table-dark table-bordered">
 <thead>
 <tr>
@@ -13,7 +17,6 @@
 <th scope="col">Description</th>
 <th scope="col">Amount</th>
 <th scope="col">Transaction Date</th>
-
 <th scope="col">Account</th>
 <th scope="col">Mange</th>
 </thead>
