Most up to date
Added some calculations to summary views.

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,10 @@
         <a class="nav-link" href="/transactions/">transactions</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/transfers/">transfers</a>
+      </li>
+
+      <li class="nav-item">
         <a class="nav-link" href="/accounts/">accounts</a>
       </li>      <li class="nav-item">
         <a class="nav-link" href="/categories/">categories</a>
