--- a/templates/transfers/transfer_form.html
+++ b/templates/transfers/transfer_form.html
@@ -6,7 +6,8 @@
 <div class="container">
       <div class="row justify-content-center">
         <div class="col-8">
-          <h1 class="mt-2">Perform a Transfer Action</h1>
+          <h1 class="mt-2">Transfer from one Account to Another</h1>
+          <p>Use this when you transfer between accounts like pay a credit card or another account</p>
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
