--- a/templates/categories/index.html
+++ b/templates/categories/index.html
@@ -13,6 +13,8 @@
 <tr>
 <th scope="col">Mster Category</th>
 <th scope="col">Category</th>
+<th scope="col">Action</th>
+
 </thead>
 <tbody>
 {% if show_categories %}
@@ -20,6 +22,8 @@
         <tr>
         <td>{{ category.master_category }}</td>
         <td>{{ category.category}}</td>
+        <td> <a class = "btn btn-danger" href="{%url "categories-delete" category.id%}">Delete</a> <a class = "btn btn-warning" href="{%url "categories-update" category.id%}">Update</a></td>
+        
      
     {% endfor %}
 {% else %}
