Bug fixes and functionality improvement
-If you enter a transaction and there is no budget for that category for that month, it creates it.

-Fixed some other calculation bugs.

- Budgettracker shows a budget on load and after you pick a month.

- Added some UI elements like a better nav bar and better spot for date picker on budgettracker.

--- a/templates/accounts/index.html
+++ b/templates/accounts/index.html
@@ -14,6 +14,7 @@
 <th scope="col">Account Name</th>
 <th scope="col">Balance Date as of</th>
 <th scope="col">Balance Amount</th>
+<th scope="col">Actions</th>
 </thead>
 <tbody>
 {% if latest_account %}
