--- a/templates/budgettracker/index.html
+++ b/templates/budgettracker/index.html
@@ -3,19 +3,21 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-8">
           <h1 class="mt-2">Budget Plan for {{ budget_month_date }}</h1>
           <div class="mt-2"></div>
-          <p>What monthly budget do you need?</p>
           <div class="mt-2"></div>
-  <form method="post">
+  <div class="d-flex flex-row-reverse">
+
+<form method="post">
     {% csrf_token %}
     {{ form|crispy }}
     <div class="mt-2"></div>
     <button type="submit" class="btn btn-primary">Show plan</button>
   </form>
+  </div>
  <div class="mt-2"></div>
  {% if budgets_for_selected_month %}
 <table class="table table-dark table-bordered">
@@ -24,7 +26,7 @@
 <th scope="col">Category</th>
 <th scope="col">Monthly Budget</th>
 <th scope="col">Monthly Spend</th>
-
+<th scope="col">Actions</th>
 </thead>
 <tbody>
 {% endif %}
@@ -34,16 +36,24 @@
         <td>{{ budget.category }}</td>
         <td>${{ budget.budget_amount | floatformat:2 }}</td>
         <td>${{ budget.monthly_spend | floatformat:2 }}</td>
+        <td> <a class = "btn btn-warning" href="{%url "budgettracker-update" budget.id%}">Update</a> <a class = "btn btn-danger" href="{%url "budgettracker-delete" budget.id%}">Delete</a></td>
+
        </tr>
     {% endfor %}
 
 
 </tbody>
 </table>
-<p><strong>Total budget this month: $</strong>{{ budget_total|floatformat:2 }}
-<p><strong>Total spend this month: $</strong>{{ total_spend|floatformat:2 }}
-<p><strong>Total budget left: $</strong>{{total_left| floatformat:2}}
+
+
 {% endif %}
+
+<p><strong>Total budget this month: $</strong>{{ budget_total|floatformat:2 }}</p>
+<p><strong>Total spend this month: $</strong>{{ total_spend|floatformat:2 }}</p>
+<p><strong>Total money left to budget: $</strong>{{total_budget_left| floatformat:2}}</p>
+<p><div class="alert alert-primary"> If the spend amount is positive at the end of the month use the money to pay down something, save or enjoy something!</div></p>
+<p> <div class="alert alert-danger"> If the spend amount is negative, you have a problem and better spend somewhere else, or save less to pay your bills!</div></p>
+
 {% endblock %}
    </div>
 </div>
