--- a/templates/transactions/index.html
+++ b/templates/transactions/index.html
@@ -18,7 +18,7 @@
 <th scope="col">Amount</th>
 <th scope="col">Transaction Date</th>
 <th scope="col">Account</th>
-<th scope="col">Mange</th>
+<th scope="col">Manage</th>
 </thead>
 <tbody>
 {% if show_transactions %}
