--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
           Transfers
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="/tranactions/">Transfers</a>
+          <a class="dropdown-item" href="/transfers/">Transfers</a>
           <a class="dropdown-item" href="/transfers/add">Add a Transfer</a>
         </div>
       </li>
