--- a/templates/budgettracker/index.html
+++ b/templates/budgettracker/index.html
@@ -6,10 +6,32 @@
 <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-8">
-          <h1 class="mt-2">Budget Plan for {{ budget_month_date }}</h1>
+          <h1 class="mt-2">Budget Plan & Spend Tracking for  {{ budget_month_date }}</h1>
           <div class="mt-2"></div>
           <div class="mt-2"></div>
+          <div class="row">
+          <div class="col-sm-6">
+         <div class="card">
+            <div class="card-body">
+            <h5 class="card-title">Budget Left This Month</h5>
+            <p class="card-text">$ {{total_monthly_budget_left| floatformat:2}}</p>
+        </div>
+      </div>
+      </div>
+        <div class="col-sm-6">
+       <div class="card" >
+            <div class="card-body">
+            <h5 class="card-title">Budget Spend This Month</h5>
+            <p class="card-text">{{total_monthly_budget_percentage| floatformat:2}}%</p>
+        </div>
+      </div>
+
+      </div>
+     </div>
+
+  <div class="mt-2"></div>
   <div class="d-flex flex-row-reverse">
+
 
 <form method="post">
     {% csrf_token %}
