--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,18 @@
           <a class="dropdown-item" href="/categories/add">Add a Category</a>
         </div>
       </li>
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          User
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="/users/profile/">Profile</a>
+          {% if request.user.is_authenticated %}
+          <a class="dropdown-item" href="{%url 'logout'%}">Logout</a>
+          {% endif %}
+          
+        </div>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
