--- a/templates/users/password_change_form.html
+++ b/templates/users/password_change_form.html
@@ -1,20 +1,17 @@
 {% extends 'base.html' %}
 
 {% load crispy_forms_tags %}
-{% block title %}Login{% endblock %}
+{% block title %}Change Password{% endblock %}
 
 {% block content %}
 <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-8">
-          <h1 class="mt-2">{{acct_name}} Login</h1>
+          <h1 class="mt-2">{{acct_name}} Password Change</h1>
     <form method="POST" class="form-group">
 	{% csrf_token %}
 	{{ form|crispy }}
-  <p></p>
-    <p> <a href="/users/register">Register?</a>&nbsp; Forgot Password? <a href="/users/password-reset">Reset here</a></p>
-    <p></p>
-	<button type="submit" class="btn btn-success">Login</button>
+	<button type="submit" class="btn btn-success">Password Change</button>
     </form>
  </div>  
  </div>
