--- a/templates/base.html
+++ b/templates/base.html
@@ -72,9 +72,10 @@
           User
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="/users/profile/">Profile</a>
           {% if request.user.is_authenticated %}
           <a class="dropdown-item" href="{%url 'logout'%}">Logout</a>
+          {% else %}
+          <a class="dropdown-item" href="{%url 'login'%}">Login</a>
           {% endif %}
           
         </div>
