--- a/templates/budgettracker/index.html
+++ b/templates/budgettracker/index.html
@@ -14,7 +14,7 @@
          <div class="card">
             <div class="card-body">
             <h5 class="card-title">Budget Left This Month</h5>
-            <p class="card-text">$ {{total_monthly_budget_left| floatformat:2}}</p>
+            <p class="card-text">$ {{total_budget_left| floatformat:2}}</p>
         </div>
       </div>
       </div>
