--- a/templates/budgettracker/index.html
+++ b/templates/budgettracker/index.html
@@ -5,12 +5,12 @@
 {% block content %}
 <div class="container-fluid">
       <div class="row justify-content-center">
-        <div class="col-8">
-          <h1 class="mt-2">Budget Plan & Spend Tracking for  {{ budget_month_date }}</h1>
+        <div class="col-md-10">
+          <h1 class="mt-2 text-center">Budget Plan & Spend Tracking for  {{ budget_month_date }}</h1>
           <div class="mt-2"></div>
           <div class="mt-2"></div>
           <div class="row">
-          <div class="col-sm-6">
+          <div class="col-md-4">
          <div class="card">
             <div class="card-body">
             <h5 class="card-title">Budget Left This Month</h5>
@@ -18,7 +18,7 @@
         </div>
       </div>
       </div>
-        <div class="col-sm-6">
+        <div class="col-md-4">
        <div class="card" >
             <div class="card-body">
             <h5 class="card-title">Budget Spend This Month</h5>
