--- a/templates/transactions/index.html
+++ b/templates/transactions/index.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container-fluid">
+<div class="container">
       <div class="row justify-content-center">
-        <div class="col-8">
           <h1 class="mt-2">Transactions for the current month</h1>
 
 <div class="d-flex flex-row-reverse">
