Add Account Transaction View
Now you can see all transactions for an account.  There is a table for running balance below as well.  This will need to be improved.

--- a/templates/budgettracker/index.html
+++ b/templates/budgettracker/index.html
@@ -42,7 +42,7 @@
   </div>
  <div class="mt-2"></div>
  {% if budgets_for_selected_month %}
-<table class="table table-dark table-bordered">
+<table class="table  table-bordered">
 <thead>
 <tr>
 <th scope="col">Category</th>
