--- a/templates/transactions/transaction_update.html
+++ b/templates/transactions/transaction_update.html
@@ -6,7 +6,7 @@
 <div class="container">
       <div class="row justify-content-center">
         <div class="col-8">
-          <h1 class="mt-2">Add a Record or Update a Record</h1>
+          <h1 class="mt-2">Update this Transaction</h1>
   <div id ="nobudget"></div>        
   <form method="post">
     {% csrf_token %}
