--- a/templates/accounts/details.html
+++ b/templates/accounts/details.html
@@ -1,38 +1,49 @@
-{% extends 'base_acct.html' %}
+{% extends 'base.html' %}
 {% block content %}
-<div class="container">
+<div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-8">
-          <h1 class="mt-2">{{acct_name}} Transaction Details</h1>
+          <h1 class="mt-2">Transactions in Account</h1>
   
-<table class="table table-dark table-bordered">
+<table class="table table-striped table-bordered">
 <thead>
 <tr>
-<th scope="col">Store</th>
-<th scope="col">Amount</th>
-<th scope="col">Description</th>
-<th scope="col">Transaction Date</th>
 <th scope="col">Category</th>
-
+<th scope="col">Amount</th>
+<th scope="col">Store</th>
+<th scope="col">Date</th>
 </thead>
 <tbody>
-{% if trans_for_account_id %}
-    {% for transaction in trans_for_account_id %}
-        <tr>
-        <td>{{ transaction.store }}</td>
-        <td>${{ transaction.amount | floatformat:2 }}</td>
-        <td>{{ transaction.description }}</td>
-        <td>{{ transaction.trans_date }}</td>
-        <td>{{ transaction.category }}</td>
-       </tr>
-       </tbody>
-   </table>
-    {% endfor %}
-{% else %}
-    Pick a date to see transactions
-{% endif %}
 
- <p><strong>Total:</strong> ${{transaction_total |floatformat:2}}</p>
+    {% for transaction in transactions  %}
+        <tr>
+        <td>{{transaction.category}}</td>
+        <td> {{transaction.store}}</td>        
+        <td>${{transaction.amount|floatformat:2 }}</td>
+        <td>{{transaction.trans_date| date:'F d Y'}}</td>
+        </tr>
+    {% endfor %}
+
+</tbody>
+</table>
+
+<table class="table table-striped table-bordered">
+<thead>
+<tr>
+<th scope="col">Balance</th>
+<th scope="col">Balance Date</th>
+</thead>
+<tbody>
+
+    {% for b in account_balances  %}
+        <tr>
+        <td>{{b.balance | floatformat:2}}</td>
+        <td>{{b.balance_date|date:'F d Y' }}</td>
+        </tr>
+    {% endfor %}
+
+</tbody>
+</table>
 
 </div>
 </div>
