Bug fixes and template view improvements
Fixed transaction and transfer bugs.
Also added template logic to format values and populate cells for better readability.

--- a/templates/budgettracker/index.html
+++ b/templates/budgettracker/index.html
@@ -19,11 +19,20 @@
       </div>
       </div>
         <div class="col-md-4">
-       <div class="card" >
+           <div class="card" >
             <div class="card-body">
             <h5 class="card-title">Budget Spend This Month</h5>
             <p class="card-text">{{total_monthly_budget_percentage| floatformat:2}}%</p>
-        </div>
+          </div>
+      </div>
+
+      </div>
+          <div class="col-md-4">
+           <div class="card" >
+            <div class="card-body">
+            <h5 class="card-title">You can still Spend</h5>
+            <p class="card-text">${{total_monthly_budget_left| floatformat:2}}</p>
+          </div>
       </div>
 
       </div>
@@ -58,7 +67,10 @@
         <tr>
         <td>{{ budget.category }}</td>
         <td>${{ budget.budget_amount | floatformat:2 }}</td>
-        <td>${{ budget.monthly_spend | floatformat:2 }}</td>
+        <td>{% if   budget.monthly_spend >= 0 %} ${{ budget.monthly_spend|floatformat:2 }}
+            {% elif budget.monthly_spend <  0 %} <div class="text-danger">${{ budget.monthly_spend|floatformat:2|cut:"-" }}</div>
+            {% endif %}
+        </td>
         <td>${{ budget.total_left | floatformat:2 }}
         <td> <a class = "btn btn-warning" href="{%url "budgettracker-update" budget.id%}">Update</a> <a class = "btn btn-danger" href="{%url "budgettracker-delete" budget.id%}">Delete</a></td>
 
