--- a/templates/accounthistory/accountfilter.html
+++ b/templates/accounthistory/accountfilter.html
@@ -1,36 +1,61 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
+{% load crispy_forms_field %}
 {% block content %}
-<div class="container-fluid">
+
+<style>
+
+
+input[name=account]{
+    margin-right:7px;
+}
+</style>
+
+<div class="container">
       <div class="row justify-content-center">
         <div class="col-12">
-          <h1 class="mt-2">Account List</h1>
-<p> Here are some Accounts</p>
+
+          <h1 class="mt-2">Account Balance Details</h1>
 
 
+<form method = "get" class="bg-light text-info border-bottom">
+              <p class="p-0 text-center text-dark"><strong>Select Account(s):</strong> </p>
+   {% for field in filter.form %}
+   <div class="form-group col-md-12 text-center p-1">
+    <strong> {{filter.form.account| as_crispy_field}}</strong>
+    </div>
+    {% endfor %}
+    
+    <div class="col text-center">
+
+     <button type ="submit" class="btn btn-primary mb-2 text-right">Filter your Account(s)</button> 
+     </div>
+  </form>
+<div class="mb-4"></div>
+<div class="container">
 <table class="table table-striped table-bordered">
 <thead>
 <tr>
 <th scope="col">Account Name</th>
 <th scope="col">Store/Business</th>
-<th scope="col">Transaction Category</th>
-<th scope="col">Transaction Amount </th>
-<th scope="col">Balance Date as of</th>
+<th scope="col" class="d-none d-sm-table-cell d-md-table-cell">Transaction Category</th>
+<th scope="col" class="d-none d-sm-table-cell d-md-table-cell">Transaction Amount </th>
+<th scope="col" >Balance Date as of</th>
 <th scope="col">Balance</th>
 </thead>
 <tbody>
-{% if show_history %}
-    {% for acct in  show_history  %}
+    {% for acct in  filter.qs  %}
         <tr>
         <td><strong>{{acct.account}}</strong></td>
         <td>{% if acct.transfer.incoming_account == acct.account %} Incoming transfer from: <strong>{{acct.transfer.outgoing_account}}</strong>
             {% elif acct.transfer.outgoing_account == acct.account %}Outgoing transfer to: <strong> {{acct.transfer.incoming_account}}</strong>
             {% else %}{{acct.transaction.store}}
             {% endif %}</td>
-        <td>{% if acct.transfer.incoming_account == acct.account or acct.transfer.outgoing_account == acct.account %} <div class="text-warning">Transfer</div>
+        <td class="d-none d-sm-table-cell d-md-table-cell" >{% if acct.transfer.incoming_account == acct.account or acct.transfer.outgoing_account == acct.account %} <div class="text-warning">Transfer</div>
         {% else %}
         {{acct.transaction.category}}
         {% endif %}</td>
-        <td>{% if   acct.account == acct.transfer.incoming_account %} <div class="text-success">${{ acct.transfer.transfer_amount }}</div>
+        <td class="d-none d-sm-table-cell d-md-table-cell">{% if   acct.account == acct.transfer.incoming_account %} <div class="text-success">${{ acct.transfer.transfer_amount }}</div>
             {% elif acct.account == acct.transfer.outgoing_account  %}  <div class="text-danger">${{ acct.transfer.transfer_amount|floatformat:2|cut:"-" }}</div>
             {% else %} ${{acct.transaction.amount|floatformat:2}}
             {% endif %}</td>
@@ -42,12 +67,10 @@
          </td>
 
     {% endfor %}
-{% else %}
-    Nothing available
-{% endif %}
+
 </tbody>
 </table>
-<p>Note: Negative balance means money is owing.  Generally loans and credit cards have a negative balance </p>
+</div>
 </div>
 </div>
 </div>
