--- a/templates/transactions/index.html
+++ b/templates/transactions/index.html
@@ -28,7 +28,13 @@
         <td>{{ transaction.store }}</td>
         <td> <a href="{%url "category-details" transaction.category_id%}">{{transaction.category}}</a></td>        
         <td>{{ transaction.description }}</td>
-        <td>${{ transaction.amount | floatformat:2 }}</td>
+        <td>
+        {% if   transaction.amount > 0  %}
+           <div class="text-success">${{ transaction.amount | floatformat:2 }}</div>
+        {% else %}
+           <div class="text-danger"> ${{ transaction.amount|floatformat:2|cut:"-" }}   
+        {% endif %}   
+           </td>
         <td>{{ transaction.trans_date }}</td>
         <td>{{ transaction.account_name }}</td>
 
@@ -40,8 +46,6 @@
 {% endif %}
 </tbody>
 </table>
-
-<p><strong>Total spend this month: $</strong>{{ total }}
 
 {% endblock %}
    </div>
