--- a/templates/budgettracker/index.html
+++ b/templates/budgettracker/index.html
@@ -10,18 +10,26 @@
           <div class="mt-2"></div>
           <div class="mt-2"></div>
           <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-2">
          <div class="card">
             <div class="card-body">
-            <h5 class="card-title">Amount of money not allocated to a budget:</h5>
+            <h5 class="card-title">Money not budgeted:</h5>
             <p class="card-text">$ {{total_budget_left| floatformat:2}}</p>
         </div>
       </div>
       </div>
-        <div class="col-md-3">
+          <div class="col-md-2">
+         <div class="card">
+            <div class="card-body">
+            <h5 class="card-title">Total budgeted:</h5>
+            <p class="card-text">$ {{budget_total| floatformat:2}}</p>
+        </div>
+      </div>
+      </div>
+        <div class="col-md-2">
            <div class="card" >
             <div class="card-body">
-            <h5 class="card-title">Spend this month so far:</h5>
+            <h5 class="card-title">Spend this month:</h5>
             	{% if total_monthly_budget_percentage <= 20 %}
                <p class="card-text text-primary"><strong>{{total_monthly_budget_percentage| floatformat:2}}%</strong></p>
                {% elif total_monthly_budget_percentage > 20 and total_monthly_budget_percentage < 80 %}
@@ -35,7 +43,7 @@
       </div>
 
       </div>
-          <div class="col-md-3">
+          <div class="col-md-2">
            <div class="card" >
             <div class="card-body">
             <h5 class="card-title">You can still spend:</h5>
@@ -60,7 +68,7 @@
       </div>
 
       </div>
-                <div class="col-md-3">
+            <div class="col-md-2">
            <div class="card" >
             <div class="card-body">
             <h5 class="card-title">Savings:</h5>
@@ -86,63 +94,70 @@
   </form>
   </div>
  <div class="mt-2"></div>
- {% if budgets_for_selected_month %}
+ {% if budget_list %}
 <table class="table  table-bordered">
 <thead>
 <tr>
-<th scope="col">Category</th>
-<th scope="col">Monthly Budget</th>
-<th scope="col">Monthly Spend</th>
-<th scope="col">Remaining Budget </th>
-<th scope="col">Actions</th>
+<th scope="col"><div class="text-center">Category</div></th>
+<th scope="col"><div class="text-center">Monthly Budget Plan</div></th>
+<th scope="col"><div class="text-center">Spend this Month</div></th>
+<th scope="col"><div class="text-center">Last Month Spend</div></th>
+<th scope="col"><div class="text-center">Remaining Budget</div> </th>
+<th scope="col"><div class="text-center">Actions</div></th>
 </thead>
-<tbody>
-{% endif %}
-{% if budgets_for_selected_month %}
-    {% for budget in budgets_for_selected_month %}
-        <tr>
-        <td>{{ budget.category }}
+<tbody>  
+  {% for budget in budget_list %}
+      <tr>
+        <td>{{ budget.0 }}
         {% load static %}
-        {% if budget.carryover == True %}
+        {% if budget.4 == True %}
         <img src="{% static "budgettracker/carry_over.jpg" %}" alt="My image">    
         {% endif %}
         </td>
-        <td>${{ budget.budget_amount | floatformat:2 }}</td>
-        <td>{% if budget.monthly_spend >= 0 %} ${{ budget.monthly_spend|floatformat:2 }}
-            {% elif budget.monthly_spend <  0 %} <div class="text-danger">${{ budget.monthly_spend|floatformat:2|cut:"-" }}</div>
+              <td>${{ budget.1 | floatformat:2 }}</td>
+        <td>{% if budget.2 >= 0 %} ${{ budget.2|floatformat:2 }}
+            {% elif budget.2 <  0 %} <div class="text-danger">${{ budget.2|floatformat:2|cut:"-" }}</div>
             {% endif %}
         </td>
-         <td> 
-         <div class="text-center">
-         ${{ budget.total_left | floatformat:2 }}<br/>
-       <small>
-          	{% if budget.total_percent_left <= 20 %}
-          <div class="text-danger"><strong>{{ budget.total_percent_left | floatformat:2 }}% </strong></div>
-          {% elif budget.total_percent_left > 20 and budget.total_percent_left <= 80  %}
-            <div class="text-success"><strong>{{ budget.total_percent_left | floatformat:2 }}% </strong></div>
+            <td> <div class="text-center">
+           ${{budget.6| floatformat:2}}
+          </td>  
+            <td> <div class="text-center">
+           ${{budget.3| floatformat:2}}
+             <small>
+          	{% if budget.5 <= 20 %}
+          <div class="text-danger"><strong>{{ budget.5 | floatformat:2 }}% </strong></div>
+          {% elif budget.total_5 > 20 and budget.5 <= 80  %}
+            <div class="text-success"><strong>{{ budget.5 | floatformat:2 }}% </strong></div>
           {% else %}
-            <div class="text-primary"><strong>{{ budget.total_percent_left | floatformat:2 }}% </strong></div>
+            <div class="text-primary"><strong>{{ budget.5 | floatformat:2 }}% </strong></div>
 
      	{% endif %}
           	remaining</small>
-          	</div>
-         </td>        <td> <a class = "btn btn-warning" href="{%url "budgettracker-update" budget.id%}">Update</a> <a class = "btn btn-danger" href="{%url "budgettracker-delete" budget.id%}">Delete</a></td>
-
-       </tr>
-    {% endfor %}
-
-
+          </td>  
+               <td> <a class = "btn btn-warning" href="{%url "budgettracker-update" budget.7%}">Update</a> <a class = "btn btn-danger" href="{%url "budgettracker-delete" budget.7%}">Delete</a></td>
+          
+      </tr>
+{% endfor %}
+{% endif %}
 </tbody>
 </table>
 
 
-{% endif %}
 
-<p><strong>Total budget this month: $</strong>{{ budget_total|floatformat:2 }}</p>
-<p><strong>Total spend this month: $</strong>{{ total_spend|floatformat:2 }}</p>
+
+
+
+<p><strong>Total budget this month: </strong>${{ budget_total|floatformat:2 }}</p>
+<p><strong>Total spend this month:</strong> ${% if total_spend < 0 %}{{ total_spend|floatformat:2 }} 
+{% else %} 0.00 
+{% endif %}
+</p>
 <p><strong>Total money left to budget: $</strong>{{total_budget_left| floatformat:2}}</p>
 <p><div class="alert alert-primary"> If the spend amount is positive at the end of the month use the money to pay down something, save or enjoy something!</div></p>
 <p> <div class="alert alert-danger"> If the spend amount is negative, you have a problem and better spend somewhere else, or save less to pay your bills!</div></p>
+
+
 
 {% endblock %}
    </div>
