Latest update - new UI and bug fixes
New UI - other tweaks

--- a/templates/transfers/index.html
+++ b/templates/transfers/index.html
@@ -1,10 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container-fluid">
-      <div class="row justify-content-center">
-        <div class="col-8">
-          <h1 class="mt-2">Transfer List</h1>
-<p> Here are some Transfers</p>
+
+<h1 class="text-center text-md-left font-weight-lighter p-0 mt-2">Transfer List</h1>
+<p> Below are transfers that have occured on your accounts.  A transfer will not change the amount of money you have, it just shows when money is transfered from one account to another.  When you pay a credit card bill or move money from a non-savings to savings account is when you will most likely see transfers.</p>
 
 
 
