--- a/templates/accounthistory/accountfilter.html
+++ b/templates/accounthistory/accountfilter.html
@@ -11,14 +11,10 @@ input[name=account]{
 }
 </style>
 
-<div class="container">
-      <div class="row justify-content-center">
-        <div class="col-12">
-
-          <h1 class="mt-2">Account Balance Details</h1>
+<h1 class="text-center text-md-left font-weight-lighter p-0 mt-2">Account Balance Details</h1>
 
 
-<form method = "get" class="bg-light text-info border-bottom">
+<form method = "get" class="bg-white text-info border-bottom">
               <p class="p-0 text-center text-dark"><strong>Select Account(s):</strong> </p>
    {% for field in filter.form %}
    <div class="form-group col-md-12 text-center p-1">
@@ -32,8 +28,7 @@ input[name=account]{
      </div>
   </form>
 <div class="mb-4"></div>
-<div class="container">
-<table class="table table-striped table-bordered">
+<table class="table table-striped table-bordered bg-white">
 <thead>
 <tr>
 <th scope="col">Account Name</th>
@@ -70,9 +65,6 @@ input[name=account]{
 
 </tbody>
 </table>
-</div>
-</div>
-</div>
-</div>
+
 
 {% endblock %}
