--- a/templates/accounts/accounts_form.html
+++ b/templates/accounts/accounts_form.html
@@ -3,15 +3,12 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container">
-      <div class="row justify-content-center">
-        <div class="col-8">
-          <h1 class="mt-2">Add a Category or Update One</h1>
+<h1 class="text-center text-md-left font-weight-lighter p-0 mt-2">Add an Account</h1>
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
     <div class="mt-2"></div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary mb-3">Submit</button>
   </form>
  
 {% endblock %}
