--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    {% load static %}    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 {% load bootstrap4 %}       {# import bootstrap4/bootstrap3 #}
@@ -9,16 +10,21 @@
 {# Embed Bootstrap JS+jQuery #}
 {{ form.media }}            {# Adds date-picker required JS and CSS #}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" integrity="sha256-BJ/G+e+y7bQdrYkS2RBTyNfBHpA9IuGaPmf9htub5MQ=" crossorigin="anonymous" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" integrity="sha256-BJ/G+e+y7bQdrYkS2RBTyNfBHpA9IuGaPmf9htub5MQ=" crossorigin="anonymous" />
+
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
-  <body>
+  <body class="bg-light">
+  <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-  <a class="navbar-brand text-white" href="#">Personal Budgeting</a>
+  <a class="navbar-brand text-white" href="#"> <span class="oi oi-infinity"></span><strong>&nbsp;Personal Budgeting</a></strong>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav small">
 
         <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle text-white" href="/budgettracker" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -58,7 +64,6 @@
           <a class="dropdown-item" href="/transfers/add">Add a Transfer</a>
         </div>
       </li>
-            </li>
         <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Categories
@@ -68,34 +73,34 @@
           <a class="dropdown-item" href="/categories/add">Add a Category</a>
         </div>
       </li>
-        <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <strong><span class="oi oi-dollar"></span></span> {{request.user.username}}</strong>
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          
-          {% if request.user.is_authenticated %}
-          <a class="dropdown-item" href="{%url 'logout'%}">Logout</a>
-          {% else %}
-          <a class="dropdown-item" href="{%url 'login'%}">Login</a>
-          {% endif %}
-          
-        </div>
-      </li>
+
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0 text-white" type="submit">Search</button>
-    </form>
-  </div>
+  <ul class="nav nav-bar ml-auto justify-content-st">
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <strong><span class="oi oi-dollar"></span> {{request.user.username}}</strong>
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        
+        {% if request.user.is_authenticated %}
+        <a class="dropdown-item" href="{%url 'logout'%}">Logout</a>
+        {% else %}
+        <a class="dropdown-item" href="{%url 'login'%}">Login</a>
+        {% endif %}
+        
+      </div>
+    </li>
+  </ul>
 </nav>
-  <div class="container-fluid border">
+</header>
+  <div class="container">
           {% block content %}
           {% endblock %}
   </div>
-  <div class="container-fluid bg-dark p-3">
-    <p class="text-center text-white">Personal budgeting that rocks!</div>
-  </div>
+  <footer class="footer">
+    <p class="text-center text-white bg-dark">Personal budgeting that rocks!</p>
+
+  </footer>
   </body>
 
 </html>
