--- a/templates/budgettracker/budgettracker_form.html
+++ b/templates/budgettracker/budgettracker_form.html
@@ -5,19 +5,17 @@
 
 
 {% block content %}
-<div class="container">
-      <div class="row justify-content-center">
-        <div class="col-8">
-          <h1 class="mt-2">Add an Item to your Budget</h1>
+<h1 class="text-center text-md-left font-weight-lighter p-0 mt-2">Add an Item to your Budget</h1>
+  <div class="col-sm-3"></div>
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
     <div class="mt-2"></div>
       <div id="average_budget"></div>   
       <div class="row mt-3"></div> 
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary mb-3">Submit</button>
   </form>
-
+</div>
 {% block javascript %}
   	<script>
       var category = 0;
