--- a/templates/budgettracker/index copy.html
+++ b/templates/budgettracker/index copy.html
@@ -3,87 +3,99 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-            <h1 class="text-center text-md-left font-weight-lighter p-0 mt-2">Budget Spend Tracking for  {{ budget_month_human }}</h1>
-            <div class="container bg-secondary p-3">
-              <div class="row">
-                <div class="col-md-3 mt-1">
-                 <div class="card">
-                     <div class="card-body">
-                        {% if total_monthly_budget_percentage <= 50 %}
-                      <h4 class="text-success mb-0">
-                       <strong>${{total_monthly_budget_left| floatformat:2}}</strong>
-                     </h4>
-                    {% elif total_monthly_budget_percentage > 50 and total_monthly_budget_percentage <= 80 %}
-                    <h4 class="text-warning">
-                      <strong>${{ total_monthly_budget_left| floatformat:2 }}</strong>
-                    </h4>
-                    {% else %}
-                    <h4 class="text-danger">
-                      <strong>${{total_monthly_budget_left| floatformat:2}}</strong>
-                    </h4>
-                    {% endif %}
-                    <span class="small mt-0 font-weight-lighter">Spend left</span>  
-                  </div>
-                </div>
-              </div>
-                <div class="col-md-3 mt-1">
-                <div class="card">
-                  <div class="card-body">
-                    <h4 class="text-success mb-0 text-danger">
-                        <strong>
-                          ${% if total_spend < 0 %}{{ total_spend|floatformat:2|slice:"1:" }} 
-                            {% else %} 0.00 
-                          {% endif %}
-                        </strong>
-                      </h4>
-                      <span class="small mt-0 font-weight-lighter">Monthly spend</span>  
-                  </div>
-                </div>      
-              </div>
-                <div class="col-md-3 mt-1">
-                 <div class="card">
-                  <div class="card-body">
-                    <h4 class="mb-0">
-                        <strong>
-                          $ {{budget_total| floatformat:2}}
-                        </strong>
-                      </h4>
-                      <span class="small mt-0 font-weight-lighter">Budget</span>  
-                  </div>
-                </div>      
-              </div>
-                <div class="col-md-3 mt-1">
-                <div class="card">
-                  <div class="card-body">
-                    <h4 class="mb-0 text-secondary">
-                        <strong>
-                          $ {{total_budget_left| floatformat:2}}
-                        </strong>
-                      </h4>
-                      <span class="small mt-0 font-weight-lighter">Budget left</span>  
-                  </div>
-                </div>      
-              </div>
-                                        
-              </div>                                    
+<div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-md-10">
+          <h1 class="mt-2 text-center">Budget Spend Tracking for  {{ budget_month_human }}</h1>
+          <div class="mt-2"></div>
+          <div class="mt-2"></div>
+          <div class="row">
+          <div class="col-md-4">
+         <div class="card">
+            <div class="card-body">
+            <h5 class="card-title">Money not budgeted:</h5>
+            <p class="card-text">$ {{total_budget_left| floatformat:2}}</p>
+        </div>
+      </div>
+      </div>
+          <div class="col-md-4">
+         <div class="card">
+            <div class="card-body">
+            <h5 class="card-title">Total budgeted:</h5>
+            <p class="card-text">$ {{budget_total| floatformat:2}}</p>
+        </div>
+      </div>
+      </div>
+        <div class="col-md-4">
+           <div class="card" >
+            <div class="card-body">
+            <h5 class="card-title">Spend this month</h5>
+            	{% if total_monthly_budget_percentage <= 20 %}
+               <p class="card-text text-primary"><strong>{{total_monthly_budget_percentage| floatformat:2}}%</strong></p>
+               {% elif total_monthly_budget_percentage > 20 and total_monthly_budget_percentage < 80 %}
+              <p class="card-text text-success"><strong>{{total_monthly_budget_percentage| floatformat:2}}%</strong></p>
+            {% else %}
+                <p class="card-text danger"><strong>{{total_monthly_budget_percentage| floatformat:2}}%</strong></p>
+            {% endif %}
+              <p class="small text-center"><strong><i>*Excludes savings and investment money budgeted</i></strong></p>
+
+          </div>
+      </div>
+
+      </div>
+          <div class="col-md-2">
+           <div class="card" >
+            <div class="card-body">
+            <h5 class="card-title">You can still spend:</h5>
+            <p class="card-text">
+            {% if total_monthly_budget_percentage <= 50 %}
+            <div class="text-success">
+            <strong>${{total_monthly_budget_left| floatformat:2}}</strong>
             </div>
-   
+            {% elif total_monthly_budget_percentage > 50 and total_monthly_budget_percentage <= 80 %}
+            <div class="text-warning">
+            <strong>${{ total_monthly_budget_left| floatformat:2 }}</strong>
+            </div>
+            {% else %}
+            <div class="text-danger">
+            <strong>${{total_monthly_budget_left| floatformat:2}}</p></strong>
+            </div>
+            </p>
+            {% endif %}
+           <p class="small text-center"><strong><i>*Your savings will still be there if you spend all your money here!</i></strong></p>
 
-  <div class="container">
-    <div class="row">
-      <div class="d-flex flex-row">
-        <form method="post">
-          {% csrf_token %}
-          {{ form|crispy }}
-      <button type="submit" class="btn btn-primary mt-2">Show plan</button>
-    </form>
-    </div>
-  </div> 
+          </div>
+      </div>
 
+      </div>
+            <div class="col-md-2">
+           <div class="card" >
+            <div class="card-body">
+            <h5 class="card-title">Savings:</h5>
+            <p class="card-text">
+            <div class="text-success">
+            <strong>${{current_savings| floatformat:2}}</strong>
+            </div>
+          </div>
+      </div>
+
+      </div>
+     </div>
+
+  <div class="mt-2"></div>
+  <div class="d-flex flex-row-reverse">
+
+
+<form method="post">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <div class="mt-2"></div>
+    <button type="submit" class="btn btn-primary">Show plan</button>
+  </form>
   </div>
  <div class="mt-2"></div>
  {% if budget_list %}
-<table class="table  table-bordered bg-white">
+<table class="table  table-bordered">
 <thead>
 <tr>
 <th scope="col"><div class="text-center">Category</div></th>
@@ -144,6 +156,8 @@
 {% endif %}
 </p>
 <p><strong>Total money left to budget: $</strong>{{total_budget_left| floatformat:2}}</p>
+<p><div class="alert alert-primary"> If the spend amount is positive at the end of the month use the money to pay down something, save or enjoy something!</div></p>
+<p> <div class="alert alert-danger"> If the spend amount is negative, you have a problem and better spend somewhere else, or save less to pay your bills!</div></p>
 
 {{budget_month_date|json_script:"thedate" }}
 <script>
@@ -199,5 +213,7 @@ if (endofday.indexOf('-'),0==0)
 </script>
 
 {% endblock %}
-   
+   </div>
+</div>
+</div>
 
