--- a/templates/categories/index.html
+++ b/templates/categories/index.html
@@ -1,14 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container">
-      <div class="row justify-content-center">
-        <div class="col-8">
-          <h1 class="mt-2">Category List</h1>
-<p> Here are some categories that have been defined</p>
 
+            <h1 class="text-center text-md-left font-weight-lighter p-0 mt-2">Category List</h1>
+<p>Categories defined for your budget.  You may added categories at anytime.  Don't delete USED categories as historical budgeting and spend on a category may not function as expected.</p>
 
-
-<table class="table table-striped table-bordered">
+<table class="table table-striped table-bordered bg-white">
 <thead>
 <tr>
 <th scope="col">Mster Category</th>
@@ -32,8 +28,5 @@
 </tbody>
 </table>
 
-</div>
-</div>
-</div>
 
 {% endblock %}
