--- a/templates/transactions/category_transactions.html
+++ b/templates/transactions/category_transactions.html
@@ -1,13 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container-fluid">
-      <div class="row justify-content-center">
-        <div class="col-8">
-          <h1 class="mt-2">Transactions for <span class="text-info"> {{transactions.0.category}}</span> category this month</h1>
+<h1 class="text-center text-md-left font-weight-lighter p-0 mt-2">Transactions for <span class="text-info"> {{transactions.0.category}}</span> </h1>
 
 
 <div class="mt-2"></div>
-<table class="table table-dark table-bordered">
+<table class="table table-light bg-white table-bordered">
 <thead>
 <tr>
 <th scope="col">Store</th>
@@ -37,6 +34,4 @@
 <p><strong>Total category spend or income this month: $</strong>{{ total|floatformat:2 }}
 
 {% endblock %}
-   </div>
-</div>
-</div>>
+
