--- a/templates/transactions/transaction_form.html
+++ b/templates/transactions/transaction_form.html
@@ -3,10 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container">
-      <div class="row justify-content-center">
-        <div class="col-8">
-          <h1 class="mt-2">Add a Record or Update a Record</h1>
+<h1 class="text-center text-md-left font-weight-lighter p-0 mt-2">Add a new Transaction or Update a Transaction</h1>
   <div id ="nobudget"></div>        
   <form method="post">
     {% csrf_token %}
