--- a/templates/accounts/index.html
+++ b/templates/accounts/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-            <h1 class="text-center text-md-left font-weight-lighter p-0 mt-2">Account List</h1>
-<p> Your current account holdings</p>
+            <h1 class="text-center text-md-left font-weight-lighter p-0 mt-2">Current Account Holdings</h1>
+<p> Here are all the accounts that are contributing to your budget.  You may add an accont at anytime.  It is recommended you add an account with today's balance so there are no adverse effects to your budget/spend history.</p>
 
 
 
