--- a/templates/categories/categories_form_update.html
+++ b/templates/categories/categories_form_update.html
@@ -3,9 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-
-      <h1 class="text-center  font-weight-lighter p-0 mt-2">Transfer Accounts</h1>
-          <p class="text-center">Transfer your funds from one account to another.</p>
+  <h1 class="text-center  font-weight-lighter p-0 mt-2">Category Update</h1>
           <div class="col-sm-12">
             <div class=" row justify-content-center mb-3">
             <form method="post" class="text-left border p-3 bg-white font-weight-lighter">
@@ -16,7 +14,5 @@
             </form>
           </div>
           </div>
-           
+ 
 {% endblock %}
-
-
