--- a/templates/accounts/accounts_form.html
+++ b/templates/accounts/accounts_form.html
@@ -3,12 +3,16 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<h1 class="text-center text-md-left font-weight-lighter p-0 mt-2">Add an Account</h1>
-  <form method="post">
+<h1 class="text-center  font-weight-lighter p-0 mt-2">Add an Account</h1>
+<div class="col-sm-12">
+  <div class=" row justify-content-center mb-3">
+  <form method="post" class="text-left border p-3 bg-white font-weight-lighter">
     {% csrf_token %}
     {{ form|crispy }}
     <div class="mt-2"></div>
-    <button type="submit" class="btn btn-primary mb-3">Submit</button>
+    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
+</div>
+</div>
  
 {% endblock %}
